# deputy-mcp

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  server.json
.github/workflows/: ci.yml
examples/: mock_deputy.py
src/deputy_mcp/: __init__.py  __main__.py  _util.py  cli.py  config.py  errors.py  oauth.py  render.py
src/deputy_mcp/client/: __init__.py  errors.py  http.py  ical.py  models.py  query.py  reads.py  whoami.py  writes.py
src/deputy_mcp/server/: __init__.py  _read_helpers.py  app.py  formatting.py  prompts.py  resources.py  tools_read.py  tools_write.py
tests/: conftest.py  test_cli.py  test_cli_ical.py
tests/client/: __init__.py  test_ical_mode_client.py  test_ical_source.py  test_oauth_client.py  test_reads.py  test_writes.py
tests/fixtures/: company.json  employees.json  operational_units.json  rosters.json  timesheets.json  whoami.json
tests/live/: test_live_smoke.py
tests/server/: __init__.py  test_ical_mode_server.py  test_resources_prompts.py  test_tools_read.py  test_tools_read_ical.py  test_tools_write.py
tests/unit/: test_cli_oauth.py  test_config.py  test_config_envfile.py  test_config_mode.py  test_config_oauth.py  test_errors_http.py  test_ical.py  test_import_order.py  test_login_flow.py  test_models.py  test_oauth.py  test_oauth_client.py  test_query.py
