[project]
name = "deputy-mcp"
version = "0.1.0"
description = "Open-source MCP server for Deputy (deputy.com) — query rosters, timesheets and manage shifts from any MCP client"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Augusto Bastos" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "deputy",
    "workforce-management",
    "roster",
    "scheduling",
    "timesheets",
    "claude",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=3.4,<4",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.scripts]
deputy-mcp = "deputy_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/augbastos/deputy-mcp"
Repository = "https://github.com/augbastos/deputy-mcp"
Issues = "https://github.com/augbastos/deputy-mcp/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deputy_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = "fastmcp.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
